fix: Sidebar navigation arrow flipped when collapsed

--- a/features/layout/sidebar-navigation/sidebar-navigation.module.scss
+++ b/features/layout/sidebar-navigation/sidebar-navigation.module.scss
@@ -139,3 +139,7 @@
     display: flex;
   }
 }
+
+.collapseArrowItem:last-of-type {
+  transform: rotate(180deg);
+}
